<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="24dp"
    tools:context=".ui.MyRequestsActivity">

    <TextView
        android:id="@+id/backTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_back"
        android:textSize="16sp"
        android:clickable="true"
        android:focusable="true"
        android:drawableStart="@android:drawable/ic_media_previous"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp"
        android:paddingHorizontal="24dp"/> <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title_my_requests"
    android:textSize="28sp"
    android:textStyle="bold"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/emptyListTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_requests"
        android:gravity="center"
        android:textSize="18sp"
        android:visibility="gone" /> <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/requestsRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingBottom="16dp"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:listitem="@layout/item_solicitud" /> </LinearLayout>